--- a/src/styles/timeline.css
+++ b/src/styles/timeline.css
@@ -68,7 +68,7 @@ button {
   border-radius: 43px;
 }
 .editor-desk {
-  width: 516px;
+  
   padding-top: 4px;
 }
 .editor-text {
@@ -150,7 +150,7 @@ button {
 .timeline {
 }
 .tweet {
-  width: 598px;
+  width: 100%;
   border-top: solid 1px var(--border-color);
   border-bottom: solid 1px var(--border-color);
 }
